--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
   <body>
     <h1>Scottish Munros</h1>
   </body>
-  <div class="munros-container">
+  <select id="munros-selector">
+    <option disabled selected>Select one region</option>
 
+  </select>
+  <div class="munros-container">
   </div>
 </html>
